--- a/Module1/HW01/Homework01.ipynb
+++ b/Module1/HW01/Homework01.ipynb
@@ -117,6 +117,61 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5a75436e",
+   "metadata": {},
+   "source": [
+    "# Problem 2: Hyperbolic Tangent function\n",
+    "\n",
+    "The function $\\tanh(x)$, called the hyperbolic tangent function, is a mathematical function that maps a real number $x$ to a value between -1 and 1. It's defined as the ratio of the difference of the exponential function $e^x$ and the exponential function $e^{-x}$ to their sum:\n",
+    "\n",
+    "<span style=\"font-size:2em\"> $ tanh(x) = \\frac{{e^x - e^{-x}}}{{e^x + e^{-x}}} $ </span>\n",
+    "\n",
+    "The hyperbolic tangent function is often used in various fields of mathematics, engineering, and science. It has properties similar to the regular tangent function, but it operates in the context of hyperbolic functions. In neural networks and machine learning, the tanh function is commonly used as an activation function for neurons in a layer due to its range and shape properties.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0163f15",
+   "metadata": {},
+   "source": [
+    "**2a** Define a python function that takes an input parameter of x and return tanh(x)\n",
+    "You may use any functions that exist in math and/or numpy module for this implementation\n",
+    "https://numpy.org/doc/stable/reference/routines.math.html\n",
+    "https://docs.python.org/3/library/math.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01ee3a67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define your function here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8287933c",
+   "metadata": {},
+   "source": [
+    "**2b** use the tanh function that you defined in **2a** to calculate the tanh(x) values at\n",
+    "- x = -100.0\n",
+    "- x = 1.0\n",
+    "- x = 5000.0\n",
+    "Write your code in a code cell and summarize your findings in a markdown cell"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5cc1742d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Problem 2: Perfect Hardboiled Eggs\n",
