--- a/Module1/HW01/Homework01.ipynb
+++ b/Module1/HW01/Homework01.ipynb
@@ -172,51 +172,92 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1ba880e5",
    "metadata": {},
    "source": [
-    "## Problem 3: Estimating Half-Life\n",
+    "# Problem 3 Taylor Expansion\n",
     "\n",
-    "[Adapted from Ayars, Problem 0-3] The data in file [Ba137.txt](https://raw.githubusercontent.com/celegante/code_chapter_0-_github/master/Ba137.txt) is actual data from a radioactive decay experiment (you should already have the file from the Workshop). The first column is the number of decays $N$, the second is the time $t$ in seconds. We'd like to know the half-life $t_{1/2}$ of $^{137}\\text{Ba}$. It should follow the decay equation $$ N = N_0 e^{-\\lambda t} $$ where $\\lambda = \\frac{\\log 2}{t_{1/2}}$. Using the techniques you've learned from the lecture and workshop, load the data from the file Ba137.txt into appropriately-named variables. Experiment with different values of $N$ and $\\lambda$ and plot the resulting equation on top of the data. (Python uses `exp()` to calculate the exponential function: i.e. `y = A*exp(-L*time)` ) Don't worry about automating this process yet (unless you *really* want to!) just try adjusting things by hand until the equation matches the data pretty well. What is your best estimate for $t_{1/2}$?"
+    "A Taylor expansion, also known as a Taylor series or Taylor polynomial, is a mathematical representation that allows us to approximate a function using a polynomial expression. This approximation is centered around a specific point, often denoted as $x = a$, and it's particularly useful when dealing with functions that might be complex or difficult to work with directly.\n",
+    "\n",
+    "The Taylor expansion expresses a function $f(x)$ as an infinite sum of terms involving the function's derivatives evaluated at the point $x = a$. The general formula for the Taylor expansion of a function $f(x)$ centered at $x = a$ is:\n",
+    "\n",
+    "$$ f(x) = f(a) + f'(a)(x - a) + \\frac{f''(a)}{2!}(x - a)^2 + \\frac{f'''(a)}{3!}(x - a)^3 + \\cdots $$\n",
+    "\n",
+    "In a more compact form, using sigma notation, the Taylor series can be written as:\n",
+    "\n",
+    "$$ f(x) = \\sum_{n=0}^{\\infty} \\frac{f^{(n)}(a)}{n!}(x - a)^n $$\n",
+    "\n",
+    "Where:\n",
+    "- $f^{(n)}(a)$ represents the $n$th derivative of the function $f(x)$ evaluated at $x = a$.\n",
+    "- $n!$ is the factorial of $n$.\n",
+    "\n",
+    "The Taylor expansion becomes more accurate as more terms are included, making it a powerful tool for approximating functions, especially when the function itself is not easy to work with directly. By using only a few terms, it's often possible to get a good approximation of the function's behavior near the point $x = a$.\n"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "2f8076d6",
    "metadata": {},
    "source": [
-    "*Output for 3:*\n",
-    "When you run your code cell, it should produce a well-labeled plot with both the data and your curve of best fit. It should also print a message to the terminal which says, \"My best estimate for the half life is $x$\", where $x$ is your estimate with units."
+    "## **3a** Taylor expansion for y = cos(x) around x = 0\n",
+    "\n",
+    "The Taylor expansion of $y = \\cos(x)$ around $x = 0$ is given by:\n",
+    "\n",
+    "$$ \\cos(x) \\approx 1 - \\frac{x^2}{2!} + \\frac{x^4}{4!} - \\frac{x^6}{6!} + \\cdots $$\n",
+    "\n",
+    "This can also be expressed using sigma notation:\n",
+    "\n",
+    "$$ \\cos(x) \\approx \\sum_{n=0}^{\\infty} (-1)^n \\frac{x^{2n}}{(2n)!} $$\n",
+    "\n",
+    "Define a Python function that takes an input parameter of x and return the value of the Taylor series for $y = \\cos(x)$ around $x = 0$ up to terms at n = 3. Use this function to calculate the value of $\\cos(0.1)$. Compare it with the precise value of $\\cos(0.1)$ calculated from np.cos() or math.cos(). Develop your code in a code cell and summarize your results in a markdown cell. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "389f2faa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Approximated cos(0.1): 0.9950041652777778\n",
+      "Precise cos(0.1) from numpy: 0.9950041652780258\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6792b3bf",
+   "metadata": {},
+   "source": [
+    "## 3b Taylor expansion of $y = \\log(x)$ around $x = a$ \n",
+    "The Taylor expansion of $y = \\log(x)$ around $x = a$ is given by:\n",
+    "\n",
+    "$$ \\log(x) \\approx \\log(a) + \\frac{1}{a}(x - a) - \\frac{1}{2a^2}(x - a)^2 + \\frac{2}{3a^3}(x - a)^3 - \\cdots $$\n",
+    "\n",
+    "In a more compact form, using sigma notation, the expansion can be written as:\n",
+    "\n",
+    "$$ \\log(x) \\approx \\sum_{n=1}^{\\infty} (-1)^{n+1} \\frac{(x - a)^n}{na^n} $$\n",
+    "\n",
+    "\n",
+    "Define a Python function that takes an input parameter of x and return the value of the Taylor series for $y = \\log(x)$ around $a = 1$ up to terms at n = 3. Use this function to calculate the value of $\\log(4.5)$. Here we known that $y(1) = \\log(1) = 0$.  Compare it with the precise value of $\\log(4.5)$ calculated from np.log() or math.log(). Then, repeat this calculation and comparison for x = 4.5. \n",
+    "\n",
+    "Develop your code in a code cell and summarize your results and finding in a markdown cell. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# Starting by reading in the data from the text file\n",
-    "counts, times = np.loadtxt(\"Ba137.txt\", unpack = True)\n",
-    "\n",
-    "# 'counts' and 'times' are both Python lists; you can try printing to get an idea of what values they contain\n",
-    "\n",
-    "# The numpy library has an exponential function; use np.exp(x) to return e^x"
-   ]
-  },
-  {
-   "cell_type": "markdown",
+   "id": "6419b49f",
    "metadata": {},
-   "source": [
-    "#### Hints\n",
-    "\n",
-    "Remember to comment your code and use descriptive variable names so others (and future you) can understand what you're doing!"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -235,9 +276,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 5
 }
